Squeeze default hitzones in there

--- a/eh-cheatsheet.tex
+++ b/eh-cheatsheet.tex
@@ -320,6 +320,20 @@ Unconscious        & Is considered still, cannot move or take actions
 If the character is \emph{blinded} and \emph{deafened} at the same time, the
 perception rank is considered to be at 1 (-4 modifier).
 
+\subsection{Default Hitzones}
+
+\begin{center}
+\begin{tabular}{lll}
+\textbf{2d6} & \textbf{Zone} & \textbf{Effect}     \\
+2               & Vital Organ   & Damage * 6, Special \\
+3, 4            & Legs          &                     \\
+5, 6, 7         & Torso         & Damage * 2          \\
+8, 9            & Arms          &                     \\
+10, 11          & Head          & Damage * 3          \\
+12              & Vital Organ   & Damage * 6, Special
+\end{tabular}
+\end{center}
+
 \section{Morale}
 
 Morale ranges from -3 to +3. With -3 being despair, 0 being neutral and
