Add explosives skill

--- a/eh-cheatsheet.tex
+++ b/eh-cheatsheet.tex
@@ -143,6 +143,7 @@ Dodging                   & DEX          & PER          &  \\
 Driving                   & PER          & DEX          &  \\
 \textit{Engineering}      & \textit{INT} & \textit{INT} &  \\
 Escape Artist             & STR          & DEX          &  \\
+Explosives                & INT          & DEX          &  \\
 First Aid                 & INT          & PER          &  \\
 Heavy Weapons             & DEX          & PER          &  \\
 Intrusion                 & DEX          & INT          &  \\
